tests/error/ifThenElse-wrong-argument.uplc
(program 1.0.0 [ [ [ (force (builtin ifThenElse)) (con unit ()) ] (con integer 0) ] (con integer 1) ])